# submission-1176-code

./: README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  generate.py
src/scenes/: __init__.py
src/scenes/marble/: README.md  __init__.py  label_gaussians.py  marble_api.py  pipeline.py  postprocess.py  quality.py  render_gsplat.py  sam3_worker.py  scene.py  segment_scene.py
src/scenes/sage/: downloader.py  loader.py  pipeline.py  scene.py
src/scenes/scenesmith/: loader.py  pipeline.py  scene.py
src/tasks/: __init__.py  templates.py
src/tasks/camera_and_viewpoint/: 011_camera_relative_position.py  012_camera_facing_direction.py  013_camera_motion.py  014_viewpoint_change.py
src/tasks/complex_reasoning/: 015_spatial_imagination.py  016_compound_spatial_referring.py  018_spatial_compatibility.py  030_route_planning.py
src/tasks/direction_and_position/: 004_relative_direction.py  005_camera_object_position.py  027_camera_region_position.py  028_object_region_position.py  029_region_region_position.py
src/tasks/distance_and_depth/: 000_closest_object.py  001_depth_estimation.py  002_distance_estimation.py  003_object_distance.py  006_depth_ordering.py  020_depth_difference.py
src/tasks/grounding_and_placement/: 010_object_grounding.py  017_object_placement.py  019_object_matching_mv.py  021_object_grounding_bbox.py  024_comparative_spatial_grounding.py  031_free_space.py  (+2 more)
src/utils/: __init__.py  annotate.py  bbox_overlay.py  cameras.py  constants.py  filter_views.py  isaac.py  occlusion.py  parallel.py  projection.py  surface.py  vlm.py
(+10 files in other folders)
